--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cat-energy-20",
+  "name": "myportfolio",
   "private": true,
-  "description": "Личный проект «Кэт энерджи» от HTML Academy",
+  "description": "Личный сайт портфолио Askomarov",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "9.8.4",
