--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "9.8.4",
-    "browser-sync": "^2.26.10",
+    "browser-sync": "^2.26.14",
     "gulp": "4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-csso": "^4.0.1",
@@ -21,11 +21,15 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "stylelint": "13.6.1",
-    "stylelint-config-htmlacademy": "0.1.4"
+    "stylelint-config-htmlacademy": "0.1.4",
+    "webpack": "5.28.0",
+    "webpack-cli": "4.6.0"
   },
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
+    "start-webpack": "browser-sync start --server \"docs/\" --no-ui --files \"source/**/*.js\"",
+    "build-webpack": "webpack --mode production",
     "test": "npm run editorconfig && npm run stylelint",
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss"
@@ -47,6 +51,7 @@
     "node": "12.18.2"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001205",
     "del": "^5.1.0",
     "gulp-htmlmin": "^5.0.1",
     "imagemin-jpegtran": "^7.0.0",
