--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "9.8.4",
     "browser-sync": "^2.26.14",
+    "gh-pages": "^3.1.0",
     "gulp": "4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-csso": "^4.0.1",
@@ -23,7 +24,8 @@
     "stylelint": "13.6.1",
     "stylelint-config-htmlacademy": "0.1.4",
     "webpack": "5.28.0",
-    "webpack-cli": "4.6.0"
+    "webpack-cli": "4.6.0",
+    "webpack-stream": "^6.1.2"
   },
   "scripts": {
     "start": "gulp",
