add smooth scrool on ios

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "del": "^5.1.0",
     "gulp-htmlmin": "^5.0.1",
     "imagemin-jpegtran": "^7.0.0",
-    "imagemin-svgo": "^8.0.0"
+    "imagemin-svgo": "^8.0.0",
+    "scroll-into-view": "^1.16.0"
   }
 }
