--- a/package.json
+++ b/package.json
@@ -1,56 +1,54 @@
 {
-  "name": "project",
+  "name": "newteplate",
   "version": "1.0.0",
-  "description": "project",
-  "main": "gulpfile.js",
+  "description": "",
   "type": "module",
-  "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.5.x",
-    "browser-sync": "^2.27.7",
-    "del": "^6.0.0",
-    "eslint": "4.16.0",
-    "eslint-config-htmlacademy": "0.4.x",
-    "fs": "^0.0.1-security",
-    "gh-pages": "^3.2.3",
-    "gulp": "4.0.x",
-    "gulp-csso": "^3.0.1",
-    "gulp-fonter": "^0.3.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-newer": "^1.4.0",
-    "gulp-plumber": "1.2.x",
-    "gulp-postcss": "8.0.x",
-    "gulp-posthtml": "^3.0.4",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "4.0.x",
-    "gulp-sourcemaps": "2.6.x",
-    "gulp-strip-comments": "^2.5.2",
-    "gulp-strip-css-comments": "^2.0.0",
-    "gulp-svgstore": "^7.0.1",
-    "gulp-ttf2woff2": "^4.0.1",
-    "gulp-webp": "^4.0.1",
-    "gulp-zip": "^5.1.0",
-    "pixel-glass": "^1.0.13",
-    "posthtml-include": "^1.2.0",
-    "scroll-into-view": "^1.16.0",
-    "stylelint": "9.10.x",
-    "stylelint-config-htmlacademy": "0.1.x",
-    "webp-converter": "^2.2.3",
-    "webpack": "^5.65.0",
-    "webpack-stream": "^7.0.0"
-  },
+  "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build --build",
-    "zip": "gulp deployZIP --build",
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --custom-syntax postcss-scss",
     "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
-    "start": "gulp start",
-    "webp": "gulp webp",
-    "sprite": "gulp sprite"
+    "build": "gulp build --build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
+    "autoprefixer": "^10.4.4",
+    "babel-loader": "^8.2.4",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.27.9",
+    "del": "^6.0.0",
+    "gh-pages": "^3.2.3",
+    "gulp": "^4.0.2",
+    "gulp-beautify": "^3.0.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-file-include": "^2.3.0",
+    "gulp-fonter": "^0.3.0",
+    "gulp-fonter-unx": "^0.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgstore": "^9.0.0",
+    "gulp-ttf2woff2": "^4.0.1",
+    "gulp-w3c-html-validator": "^5.1.2",
+    "gulp-webp": "^4.0.1",
+    "gulp-zip": "^5.1.0",
+    "postcss-scss": "^4.0.3",
+    "sass": "^1.50.0",
+    "stylelint": "^14.7.1",
+    "webpack": "^5.72.0",
+    "webpack-stream": "^7.0.0"
   },
   "browserslist": [
     "last 2 versions",
@@ -60,12 +58,12 @@
   "editorconfig-cli": [
     "*.json",
     "*.js",
-    "source/*.html",
+    "source/**/*.html",
     "source/js/**/*.js",
     "source/img/**/*.svg",
     "source/sass/**/*.{sass,scss}"
   ],
-  "engines": {
-    "node": "8.15"
+  "dependencies": {
+    "scroll-into-view": "^1.16.0"
   }
 }
